--- a/package.json
+++ b/package.json
@@ -22,19 +22,20 @@
   },
   "homepage": "https://github.com/b3nsn0w/koa-easy-ws#readme",
   "dependencies": {
-    "debug": "^3.1.0",
-    "ws": "^5.2.0"
+    "debug": "^4.1.1",
+    "ws": "^7.2.3"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
-    "koa": "^2.5.1",
-    "koa-router": "^7.4.0",
-    "mocha": "^5.2.0",
+    "chai": "^4.2.0",
+    "koa": "^2.11.0",
+    "koa-router": "^8.0.8",
+    "mocha": "^7.1.1",
+    "npm-check-updates": "^4.1.0",
     "pre-commit": "^1.2.2",
-    "promise": "^8.0.3",
-    "request": "^2.87.0",
-    "request-promise": "^4.2.4",
-    "standard": "^12.0.1"
+    "promise": "^8.1.0",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.5",
+    "standard": "^14.3.3"
   },
   "pre-commit": [
     "test"
